Configure embedded server